Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -62,11 +62,11 @@ lender:
 
 socials:
   review_sm_icons: false
-  facebook_url: https://www.facebook.com/MovementMortgage
-  linkedin_url: https://www.linkedin.com/company/movementmortgage
+  facebook_url: https://www.facebook.com/MortgageFromJeffVN/?ref=py_c
+  linkedin_url: https://www.linkedin.com/in/jeff-van-nostran-5934b922/
   youtube_url:
-  twitter_url: https://twitter.com/MovementMtg
-  instagram_url: https://www.instagram.com/movementmtg/
+  twitter_url: https://twitter.com/mortgagehusky?lang=en
+  instagram_url: 
   pinterest_url:
   zillow_url:
   trulia_url:
