Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -24,7 +24,7 @@ client:
   phone2:
   phone2_type:
   email: jeff.vannostran@movement.com
-  url: https://movement.com/lo/jeff-vannostran
+  url: http://mortgagewithjeff.com
 
 CTAs:
   first_CTA_text: Apply Now
