--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -63,7 +63,7 @@ socials:
   review_sm_icons: false
   facebook_url: https://www.facebook.com/MortgageFromJeffVN/?ref=py_c
   linkedin_url: https://www.linkedin.com/in/jeff-van-nostran-5934b922/
-  youtube_url:
+  youtube_url: https://www.youtube.com/channel/UCrweGMiNEWqK3VX-fmmQM8Q?disable_polymer=true
   twitter_url: https://twitter.com/mortgagehusky?lang=en
   instagram_url:
   pinterest_url:
