Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -65,7 +65,7 @@ socials:
   linkedin_url: https://www.linkedin.com/in/jeff-van-nostran-5934b922/
   youtube_url: https://www.youtube.com/channel/UCrweGMiNEWqK3VX-fmmQM8Q?disable_polymer=true
   twitter_url: https://twitter.com/mortgagehusky?lang=en
-  instagram_url:
+  instagram_url: https://www.instagram.com/mortgagehusky/?hl=en
   pinterest_url:
   zillow_url:
   trulia_url:
